tests/error/modifier_errors/ctrl_arg_body_copy.err
Error: Copy violation (at $FILE:12:20)
   | 
10 | def test() -> None:
11 |     q = qubit()
12 |     with control(q, q):
   |                     ^ Variable `q` with non-copyable type `qubit` cannot be
   |                       borrowed ...
   | 
12 |     with control(q, q):
   |                  - since it was already borrowed here

Guppy compilation failed due to 1 previous error
